--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="Components/BarProgress.css">
     <title>Bem vindo!</title>
 </head>
 
@@ -89,12 +90,59 @@
           
         <!--Right Skills Content-->
         <div class="right-skills-content">
-          <p>opa ai vei</p>
+          <h4>Languages</h4>
+          <div class="Status">
+            <p>HTML</p>
+            <p>80%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="80"></progress>
+          </dd>
+
+          <div class="Status">
+            <p>CSS</p>
+            <p>80%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="80"></progress>
+          </dd>
+
+          <div class="Status">
+            <p>C++</p>
+            <p>65%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="65"></progress>
+          </dd>
+
+          <div class="Status">
+            <p>C</p>
+            <p>50%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="50"></progress>
+          </dd>
+
+          <div class="Status">
+            <p>JavaScript</p>
+            <p>35%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="35"></progress>
+          </dd>
+
+          <div class="Status">
+            <p>PHP</p>
+            <p>35%</p>
+          </div>
+          <dd>
+            <progress class="progress-bar" max="100" value="35"></progress>
+          </dd>
+
         </div>
       </div>
     </div>
 
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script> var rellax = new Rellax ('.rellax'); </script>
     <script src="Scripts/Writer.js"></script>
